# ctgen

./: pyproject.toml  readme.md
backends/cpp_iitrbd/: readme.md
backends/cpp_iitrbd/sample/: config.yaml  usage.cpp
backends/cpp_iitrbd/src/ctgen_backends/cpp_iitrbd/: __init__.py  backend.lua  config.py  configuration.lua  generator.lua  generator.py
backends/cpp_iitrbd/src/ctgen_backends/cpp_iitrbd/templates/: cmake.lua  header.lua  source.lua  tests.lua
backends/cpp_iitrbd/test/: CMakeLists.txt  dataset.cpp
backends/cpp_iitrbd/test/include/ctgen/cppiitrbd/: dataset.h  odistance.h  testmain_tpl.h
backends/octave/: readme.md
backends/octave/sample/: usage.m
backends/octave/src/ctgen_backends/octave/: __init__.py  backend.lua  config.py  generator.lua  generator.py
backends/octave/test/: BinDataset.m  orientationDistance.m
backends/plaintext/: readme.md
backends/plaintext/src/ctgen_backends/plaintext/: __init__.py  backend.lua  backend.py  generator.lua  generator.py
backends/plaintext/src/ctgen_backends/plaintext/templates/: main.lua
sample/: config.yaml  model.motdsl
sample/others/ur5_robot/: config.yaml  geometry.motdsl
src/: runner.py
src/ctgen/: assignments.lua  common.lua  common.py  dataset.py  gen.py
